7196242: vm/mlvm/indy/stress/java/loopsAndThreads crashed

Reviewed-by: jrose, coleenp, jmasa, kvn